--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage":"https://roshiniroshinim.github.io/Perfume-website",
+  "homepage": "https://roshiniroshinim.github.io/Perfume-website",
   "name": "mrgbatch",
   "version": "0.1.0",
   "private": true,
@@ -10,7 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "gh-pages": "^6.3.0",
+    "dotenv": "^17.2.1",
     "icons": "^1.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -23,8 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "react-router-dom": "^6.28.0"
   }
 }
